# cfpp

./: .gitignore  README.md
c/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  cfpp.c
c/src/: CMakeLists.txt  bits.c  bits.h  crypto.c  crypto.h  dukpt.c  dukpt.h  emv.c  emv.h  jose.c  jose.h  payments.c  payments.h  pin.c  pin.h  test_io.c  test_io.h  tr31.c  tr31.h
c/test/: CMakeLists.txt  test_bits.c  test_crypto_primitives.c  test_dukpt.c  test_emv.c  test_jose.c  test_magstripe.c  test_pin.c  test_ssl.c  test_tr31.c
java/: .project  logging.properties  pom.xml  tracker.txt
java/src/org/ilyadubinsky/cfpp/: TestBitUtils.java  TestDSA.java  TestPINBlock.java
java/src/org/ilyadubinsky/cfpp/crypto/: AsymmetricAlgorithms.java  Constants.java  MessageAuthenticationAlgorithms.java  SymmetricAlgorithms.java  Utils.java
java/src/org/ilyadubinsky/cfpp/emv/: ApplicationCryptogram.java  CertificateAuthorityKey.java  CertificateAuthorityKeyTable.java  EMVCertificate.java  EMVDDACertificate.java  EMVKey.java  EMVKeyPair.java  EMVRecoverable.java  EMVRecoverableCertificate.java  EMVRecoverableKey.java  EMVSDACertificate.java  EMVStaticDataCertificate.java  ICCPublicKey.java  IssuerPublicKey.java
java/src/org/ilyadubinsky/cfpp/jose/: BaseJOSEObject.java  JOSEHeader.java  JWE.java  JWK.java  JWKList.java
java/src/org/ilyadubinsky/cfpp/payments/: Legacy.java  PIN.java  TR31.java
java/src/org/ilyadubinsky/cfpp/utilis/: BitOps.java  Legacy.java  PIN.java  TestIO.java
java/src/org/ilyadubinsky/cfpp/utils/: BitOps.java  IO.java  Legacy.java  PIN.java  TestIO.java
